Add releng-(.*) to catch all releng planning tags
This is to catch
* Quarterly goals/keyresults/measures of success in eg:#releng-201516-q2
* #releng-admin
* any future planning projects we might make (#releng-epics?)

Change-Id: I2291cfc1f63a86c1db7bdceaff44683cb00b4d96

--- a/channels.yaml
+++ b/channels.yaml
@@ -78,6 +78,8 @@ channels:
         - Release-Engineering-Team
         - Blocked-on-RelEng
         - Releng-Admin
+        # Planning (eg: #releng-201516-q2 or #releng-admin or any future ones)
+        - releng-(.*)
         # projects
         - Continuous-Integration-Infrastructure
         - Continuous-Integration-Config
