Pywikibot-Flow → #wikimedia-collaboration
Bug: T113417
Change-Id: I09e4aa875b2b32f7896b019a3f75b1ebd59191ca

--- a/channels.yaml
+++ b/channels.yaml
@@ -37,6 +37,7 @@ channels:
         - MediaWiki-extensions-PageCuration
         - Thanks
         - WikiLove
+        - Pywikibot-Flow
 
     "#wikimedia-de-tech":
         - TCB-Team
