Send all Community-Tech-* traffic to #wikimedia-commtech
Only Community-Tech-Sprint for now

Change-Id: Ifbabeea7f2144729941e1b47269598fd48ac3aaf

--- a/channels.yaml
+++ b/channels.yaml
@@ -45,7 +45,7 @@ channels:
         - Phragile
 
     "#wikimedia-commtech":
-        - Community-Tech
+        - Community-Tech(-.*)?
 
     "#mediawiki-i18n":
         - .*-ContentTranslation
