Add #releng-epics to -releng
Also a small amount of moving around.

NB: I kept #Release-Enigneering in the team section but added
 #Release-Engineering-Epics under the planning section, just for long term
clarity.

Change-Id: Ie697deb01e81d9c898aa08b01d1cda1050b9e6db

--- a/channels.yaml
+++ b/channels.yaml
@@ -78,10 +78,11 @@ channels:
         # teams
         - Release-Engineering-Team
         - Blocked-on-RelEng
-        - Releng-Admin
         # Planning (eg: #releng-201516-q2 or #releng-admin or any future ones)
         - releng-(.*)
+        - Release-Engineering(.*) # Release-Engineering-Epics and any others
         # projects
+        - Releng-Admin
         - Continuous-Integration-Infrastructure
         - Continuous-Integration-Config
         - Continuous-Integration-Scaling
