Add #MediaWiki-Releasing to -releng
We're the team of last resort for those issues, I suppose, and the task traffic
shouldn't be too high.

Change-Id: If57d3c51e2fd0e0507088e7c39f38ca6e6fe96d6

--- a/channels.yaml
+++ b/channels.yaml
@@ -94,7 +94,7 @@ channels:
         - Gitblit-Deprecate
         - Gerrit-Migration
         - Differential
-
+        - MediaWiki-Releasing
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
