Add MediaWiki-Codesniffer to -releng
Gerrit updates already get posted to -releng, it only makes sense that
phab updates go there too.

Change-Id: I380595ac83638bd152bd54349ecab0a7c30d2250

--- a/channels.yaml
+++ b/channels.yaml
@@ -95,6 +95,7 @@ channels:
         - Gerrit-Migration
         - Differential
         - MediaWiki-Releasing
+        - MediaWiki-Codesniffer
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
