Also exclude TCB-Team- from #wikimedia-fundraising
Change-Id: I7f86e4295f25b32b8df36ea1147413e6e40cf590

--- a/channels.yaml
+++ b/channels.yaml
@@ -169,7 +169,7 @@ channels:
         - UI-Standardization
 
     "#wikimedia-fundraising":
-        - .*(?<!WMDE-)Fundraising.*
+        - .*(?<!WMDE-)(?<!TCB-Team-)Fundraising.*
 
     "#wikimedia-operations":
         - ops(-.*)?
