Send Beta-Cluster-Infrastructure to #wikimedia-releng
https://lists.wikimedia.org/pipermail/wikitech-l/2015-October/083477.html

Change-Id: Ia0b5f44e5f836b62f1976f5b981ef7ea2180e362

--- a/channels.yaml
+++ b/channels.yaml
@@ -86,7 +86,7 @@ channels:
         - Continuous-Integration-Infrastructure
         - Continuous-Integration-Config
         - Continuous-Integration-Scaling
-        - Beta-Cluster
+        - Beta-Cluster-Infrastructure
         - Staging
         - Deployment-Systems
         - Scap3
