Add WMDE-Analytics-Engineering to #wikimedia-de-tech
Change-Id: Ied64ac867a0c0ffd62990129c025fdd0157c535c

--- a/channels.yaml
+++ b/channels.yaml
@@ -43,6 +43,7 @@ channels:
         - TCB-Team
         - German-Community-Wishlist
         - Phragile
+        - WMDE-Analytics-Engineering
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
