send Mailing lists tickets to #wikimedia-mailman
Change-Id: Iefb003cc8dac14e718a2d710e1013a11a0a96827

--- a/channels.yaml
+++ b/channels.yaml
@@ -72,6 +72,9 @@ channels:
         - Gitblit-Deprecate
         - Project-Creators
 
+    "#wikimedia-mailman":
+        - Wikimedia-Mailing-lists
+
     "#wikimedia-otrs":
         - OTRS
 
