Send all User-* projects to /dev/null
There are now 3 personal user-type projects

Change-Id: I63db0d6c512c43f612fd8c2d6d9ed97aadb96d66

--- a/channels.yaml
+++ b/channels.yaml
@@ -3,7 +3,7 @@ channels:
         - foobarbaz
 
     "/dev/null":
-        - User-Bd808-Test
+        - User(-.*)?
         - Spam(-.*)?
 
     "#huggle":
