--- a/channels.yaml
+++ b/channels.yaml
@@ -100,6 +100,7 @@ channels:
         - Differential
         - MediaWiki-Releasing
         - MediaWiki-Codesniffer
+        - Testing-Initiative-2015
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
