--- a/channels.yaml
+++ b/channels.yaml
@@ -14,6 +14,7 @@ channels:
 
     "#pywikibot":
         - Pywikibot(-.*)?
+        - PAWS
 
     "#wm-bot":
         - WM-Bot
@@ -61,6 +62,7 @@ channels:
         - Wikibugs
         - Gerrit-Patch-Uploader
         - LabsDB-Auditor
+        - PAWS
 
     "#wikimedia-devtools":
         # teams
