Send Labs* to `#wikimedia-labs`
Change-Id: I0f9b9cb89d3816a07f0d5db43312f2887b2fccb9

--- a/channels.yaml
+++ b/channels.yaml
@@ -55,7 +55,7 @@ channels:
 
     "#wikimedia-labs":
         - Tool-Labs(.*)?
-        - Labs
+        - Labs(-.*)?
         - Wikimedia-Labs(-.*)?
         - MediaWiki-extensions-OpenStackManager
         - Quarry
