add traffic channel
Change-Id: Ic2e5b6868fbc99d67333757e891b674aed1e5110

--- a/channels.yaml
+++ b/channels.yaml
@@ -184,6 +184,15 @@ channels:
         - puppet
         - Blocked-on-Operations
 
+    "#wikimedia-traffic":
+        - traffic
+        - netops
+        - varnish
+        - wikimedia-dns
+        - wikimedia-apache-configuration
+        - domains
+        - HTTPS
+
     "#wikimedia-teampractices":
         - team-practices
 
