Send Education-* to wikimedia-ed
Change-Id: I9117ecb2cecf7d788e9fb31085cc74ce56a16665

--- a/channels.yaml
+++ b/channels.yaml
@@ -49,6 +49,9 @@ channels:
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
 
+    "#wikimedia-ed":
+        - Education-.*
+
     "#mediawiki-i18n":
         - .*-ContentTranslation
         - translatewiki\.net
