-releng and -devtools changes
-releng
* Added #scap and #browser-tests-infrastructure
* Removed #Differential (moved to -devtools)

-devtools
* Added #GitHub-Mirrors, #Gerrit-Migration, #Differential, and #Diffusion
** Things related to Phabricator use, basically

Change-Id: I79b7b56b902b4951f205a91a25bd833453bb58f9

--- a/channels.yaml
+++ b/channels.yaml
@@ -74,8 +74,12 @@ channels:
         - Wikibugs
         - Phabricator.org
         - RT-Migration
+        - GitHub-Mirrors
         - Gitblit-Deprecate
+        - Gerrit-Migration
         - Project-Creators
+        - Differential
+        - Diffusion
 
     "#wikimedia-mailman":
         - Wikimedia-Mailing-lists
@@ -99,12 +103,13 @@ channels:
         - Staging
         - Deployment-Systems
         - Scap3
+        - scap
         - Browser-Tests
         - Gitblit-Deprecate
         - Gerrit-Migration
-        - Differential
         - MediaWiki-Releasing
         - MediaWiki-Codesniffer
+        - Browser-Tests-infrastructure
         - Testing-Initiative-2015
 
     "#mediawiki-visualeditor":
