Send Community-Wishlist-Survey stuff to #wikimedia-commtech
Change-Id: Ia5c7dfb072d1a9840e4c6bdc2db971fadcfd0732

--- a/channels.yaml
+++ b/channels.yaml
@@ -48,6 +48,7 @@ channels:
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
+        - Community-Wishlist-Survey
 
     "#wikimedia-ed":
         - Education-.*
