Add two Collaboration team boards
Change-Id: If695758ebdd54b36daa1947ca137153da4285553

--- a/channels.yaml
+++ b/channels.yaml
@@ -31,8 +31,10 @@ channels:
     "#wikimedia-collaboration":
         # teams
         - Collaboration-Team(-.*)?
+        - Collab-Team-2016-Q4
         # projects
         - Echo
+        - Collab-Notifications-Page
         - Flow
         - MoodBar
         - MediaWiki-extensions-PageCuration
