--- a/channels.yaml
+++ b/channels.yaml
@@ -204,5 +204,8 @@ channels:
     "#wikimedia-ios":
         - Wikipedia-iOS-.*
 
+    "#wmhack":
+        - Wikimedia-Hackathon-.*
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
