Add #wikimedia-ai channel
Report #Revision-Scoring-As-A-Service
and #Revision-Scoring-As-A-Service-Backlog to #wikimedia-ai

Bug: T132359
Change-Id: I204e6390f6a1b57888d6537c39d27d8447e377d3

--- a/channels.yaml
+++ b/channels.yaml
@@ -19,6 +19,9 @@ channels:
     "#wm-bot":
         - WM-Bot
 
+    "#wikimedia-ai":
+        - Revision-Scoring-As-A-Service(-.*)?
+
     "#wikidata-feed":
         - Wikidata
         - Wikibase(-.*)?
