--- a/channels.yaml
+++ b/channels.yaml
@@ -33,11 +33,11 @@ channels:
         - Collaboration-Team(-.*)?
         - Collab-Team-2016-Q4
         # projects
-        - Echo
         - Collab-Notifications-Page
         - Flow
         - MoodBar
         - MediaWiki-extensions-PageCuration
+        - Notifications
         - Thanks
         - WikiLove
         - Pywikibot-Flow
