Update for renamed xTools project
Bug: T133364
Change-Id: I652627ae382944ba88451b0c2ede41ec4a7fdd42

--- a/channels.yaml
+++ b/channels.yaml
@@ -231,7 +231,7 @@ channels:
         - mediawiki-skins-Blueprint
 
     "#wikimedia-xtools":
-        - Tool-Labs-xTools
+        - xTools-on-Labs
 
     "#wikimedia-ios":
         - Wikipedia-iOS-.*
