Add wildcard for Collaboration team (Collab-Team(-.*)?)
Change-Id: I7bed17ca199b63e847c792ec3468a8829ab3b8ef

--- a/channels.yaml
+++ b/channels.yaml
@@ -34,7 +34,7 @@ channels:
     "#wikimedia-collaboration":
         # teams
         - Collaboration-Team(-.*)?
-        - Collab-Team-2016-Q4
+        - Collab-Team(-.*)?
         # projects
         - Collab-Notifications-Page
         - Flow
