Send WMDE-Design to #wikimedia-de-tech
Change-Id: I3cb8981dce669f984423d088ae567b63832f2e37

--- a/channels.yaml
+++ b/channels.yaml
@@ -50,6 +50,7 @@ channels:
         - German-Community-Wishlist
         - Phragile
         - WMDE-Analytics-Engineering
+        - WMDE-Design
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
