Invite wikibugs to #wikimedia-databases
Bug: T101937
Change-Id: I39d5a3e632feb5d6143a16df9979ef8759406540

--- a/channels.yaml
+++ b/channels.yaml
@@ -237,5 +237,9 @@ channels:
     "#wikimedia-ios":
         - Wikipedia-iOS-.*
 
+    "#wikimedia-databases":
+        - DBA
+        - Blocked-on-schema-change
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
