--- a/channels.yaml
+++ b/channels.yaml
@@ -232,7 +232,7 @@ channels:
         - mediawiki-skins-Blueprint
 
     "#wikimedia-xtools":
-        - xTools-on-Labs
+        - Tool-Labs-tools-Xtools
 
     "#wikimedia-ios":
         - Wikipedia-iOS-.*
