Add more projects to #wikimedia-de-tech
Change-Id: Id3af7e1fe571528d06dfb8fb4f234d0ef5b4ff29

--- a/channels.yaml
+++ b/channels.yaml
@@ -51,7 +51,11 @@ channels:
         - German-Community-Wishlist
         - Phragile
         - WMDE-Analytics-Engineering
+        - WMDE-Fundraising-Software
         - WMDE-Design
+        - Revision-Slider
+        - Attribution-Generator
+        - CatWatch
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
