Add Edit Review Improvements to #collaboration-team
Change-Id: I4c59ab375231f1ce297cafe4c8cb4c99a08c6fd6

--- a/channels.yaml
+++ b/channels.yaml
@@ -38,6 +38,7 @@ channels:
         - Collab-Team(-.*)?
         # projects
         - Collab-Notifications-Page
+        - Edit-Review-Improvements
         - Flow
         - MoodBar
         - MediaWiki-extensions-PageCuration
