Send #commit-message-validator to `#wikimedia-releng`
Change-Id: I52530467d7bf11d2a610688d221f88baf093d5d3

--- a/channels.yaml
+++ b/channels.yaml
@@ -121,6 +121,7 @@ channels:
         - MediaWiki-Codesniffer
         - Browser-Tests-infrastructure
         - Testing-Initiative-2015
+        - commit-message-validator
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
