Add #Augmented-Changes-Feed to #wikimedia-collaboration
Change-Id: I59d317c2842280c5ea5d99f90f0d265fb2b85888

--- a/channels.yaml
+++ b/channels.yaml
@@ -37,6 +37,7 @@ channels:
         - Collaboration-Team(-.*)?
         - Collab-Team(-.*)?
         # projects
+        - Augmented-Changes-Feed
         - Collab-Notifications-Page
         - Edit-Review-Improvements
         - Flow
