Report Striker (toolsadmin.wikimedia.org) to #wikimedia-labs
Change-Id: I41b5d8374611c2b8df40be341391d9bae87a6df3

--- a/channels.yaml
+++ b/channels.yaml
@@ -79,6 +79,7 @@ channels:
         - Gerrit-Patch-Uploader
         - LabsDB-Auditor
         - PAWS
+        - Striker
 
     "#wikimedia-devtools":
         # teams
