Add gerrit project to #wikimedia-releng channel
Change-Id: I06a62cddbbae45c18455525ed067c932d5f21e02

--- a/channels.yaml
+++ b/channels.yaml
@@ -117,6 +117,7 @@ channels:
         - Scap3(.*)
         - scap(.*)
         - Gitblit-Deprecate
+        - Gerrit
         - Gerrit-Migration
         - MediaWiki-Releasing
         - MediaWiki-Codesniffer
