New naming scheme for Edit-Review-Improvements projects
Augmented-Changes-Feed renamed to Edit-Review-Improvements-Feed

New project Edit-Review-Improvements-RC-Page

Change-Id: I11a70ea186ffa1862618d796a8dc99e9c1d99a8b

--- a/channels.yaml
+++ b/channels.yaml
@@ -37,9 +37,8 @@ channels:
         - Collaboration-Team(-.*)?
         - Collab-Team(-.*)?
         # projects
-        - Augmented-Changes-Feed
         - Collab-Notifications-Page
-        - Edit-Review-Improvements
+        - Edit-Review-Improvements(-.*)?
         - Flow
         - MoodBar
         - MediaWiki-extensions-PageCuration
