Add FileAnnotations to #wikimedia-multimedia channel
Bug: T144997
Change-Id: Iee4f28fbe530a8f132eacea38ebf21b88a939242

--- a/channels.yaml
+++ b/channels.yaml
@@ -172,6 +172,7 @@ channels:
         - blocked-on-services
 
     "#wikimedia-multimedia":
+        - FileAnnotations
         - Multimedia
 
     "#wikimedia-analytics":
