Change project Project-Creators to Project-Admins
Project Project-Creators no longer exist and is instead redirected to
Project-Admins

What this change does is it changes Project-Creators to Project-Admins

Bug: T142851
Change-Id: I54a88a3e90274e5ab8d3ad760c77ab266e7ab1c6

--- a/channels.yaml
+++ b/channels.yaml
@@ -90,7 +90,7 @@ channels:
         - GitHub-Mirrors
         - Gitblit-Deprecate
         - Gerrit-Migration
-        - Project-Creators
+        - Project-Admins
         - Differential
         - Diffusion
 
