Update wikimedia-services mapping
- Try to match services milestones.
- Add service-runner and cassandra projects.

Change-Id: Id6f977d924406a4eb7037a4a119f08f595961203

--- a/channels.yaml
+++ b/channels.yaml
@@ -167,8 +167,10 @@ channels:
         - MediaWiki-extensions-ParserFunctions
 
     "#wikimedia-services":
-        - restbase(-.*)?
-        - services(-.*)?
+        - restbase.*
+        - services.*
+        - service-runner
+        - cassandra
         - blocked-on-services
 
     "#wikimedia-multimedia":
