Report Cognate to wmde tech chan
Change-Id: I128097a041ea2851ad7c21413157a63aa2568a6c

--- a/channels.yaml
+++ b/channels.yaml
@@ -57,6 +57,7 @@ channels:
         - Revision-Slider
         - Attribution-Generator
         - CatWatch
+        - Cognate
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
