Report WMDE team boards to wmde tech chan
Change-Id: I63e2010ac3eb059cf89a24e46470e168eb29a992

--- a/channels.yaml
+++ b/channels.yaml
@@ -58,6 +58,7 @@ channels:
         - Attribution-Generator
         - CatWatch
         - Cognate
+        - WMDE-(.*)-Team(-Board)?
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
