Add Wikisource projects to the #wikisource IRC channel
This adds three Phabricator projects, the first two of which are
all about Wikisource, and the last is an extension that's very
fundamental to the operation of most Wikisources.

Bug: T150319
Change-Id: I64cdae70bf43bacd39d8605951df65e3cd8f3fcd

--- a/channels.yaml
+++ b/channels.yaml
@@ -252,5 +252,10 @@ channels:
         - DBA
         - Blocked-on-schema-change
 
+    "#wikisource":
+        - Wikisource
+        - Wikisource-Community-User-Group
+        - ProofreadPage
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
