Adding more configuration for #brickimedia
Added several extensions and skins which fall
under the brickimedia umbrella, which are developed
by and maintained by brickimedia - these were added so
they can be fed to the #brickimedia IRC. These include:

* ArticleFeedbackv5
* ArticleRatings
* GlobalContribs
* MediaWikiChat
* Snippet
* UnusedRedirects
* DeepSea (skin)
* Refreshed (skin)

Change-Id: I8240eea52db18c782d8c76043b90c91b3860f686

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -90,7 +90,14 @@ channels:
         mediawiki/extensions/ParserFunctions:
         mediawiki/skins/Vector:
         # These are sent to #brickimedia too
+        mediawiki/extensions/ArticleFeedbackv5:
+        mediawiki/extensions/ArticleRatings:
+        mediawiki/extensions/GlobalContribs:
         mediawiki/extensions/MediaWikiChat:
+        mediawiki/extensions/Snippet:
+        mediawiki/extensions/UnusedRedirects:
+        mediawiki/skins/DeepSea:
+        mediawiki/skins/Refreshed:
         # Sent to #wikimedia-design as well
         mediawiki/skins/Blueprint:
         mediawiki/extensions/OOUIPlayground:
@@ -181,7 +188,14 @@ channels:
         mediawiki/extensions/Campaigns:
         mediawiki/extensions/EducationProgram:
     "#brickimedia":
+        mediawiki/extensions/ArticleFeedbackv5:
+        mediawiki/extensions/ArticleRatings:
+        mediawiki/extensions/GlobalContribs:
         mediawiki/extensions/MediaWikiChat:
+        mediawiki/extensions/Snippet:
+        mediawiki/extensions/UnusedRedirects:
+        mediawiki/skins/DeepSea:
+        mediawiki/skins/Refreshed:
     "#wikimedia-services":
         # Also in #wikimedia-editing
         mediawiki/services/citoid:
