Add mediawiki/extensions/Babel to #wikimedia-dev for gerrit
Bug: T155165
Change-Id: I5a0718c3db1969b2ad129d0c39364a772e2bfee7

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -65,6 +65,8 @@ channels:
     "#wikimedia-perf":
         performance.*:
     "#wikimedia-dev":
+        # This is also sent to #mediawiki-i18n
+        mediawiki/extensions/Babel:
         # This is also sent to #wikimedia-ai
         mediawiki/extensions/ORES:
         # These are sent to #wikimedia-collaboration too
