Add project phab-*
This is the phabricator sprite for the updates we do for phabricator.

Example sprite is https://phabricator.wikimedia.org/project/manage/2391/

Also remove Phabricator.org project as it no longer exists in phabricator.

Change-Id: I8e691b94ed240b6a998a1ca013c4c69333be8b03

--- a/channels.yaml
+++ b/channels.yaml
@@ -103,9 +103,9 @@ channels:
     "#wikimedia-devtools":
         # teams
         - Phabricator
+        - phab-.*
         # projects
         - Wikibugs
-        - Phabricator.org
         - RT-Migration
         - GitHub-Mirrors
         - Gitblit-Deprecate
@@ -220,7 +220,7 @@ channels:
     "#wikimedia-dev":
         - MediaWiki(-.*)?
         - Phabricator
-        - Phabricator.org
+        - phab-.*
         - Design
         - Living-Style-Guide
         - WMF-Design
