Add phabricator-upstream to #wikimedia-dev and #wikimedia-devtools
Change-Id: Iafa9eec49b7584b31091c1ed7f16052f0e7b9836

--- a/channels.yaml
+++ b/channels.yaml
@@ -102,6 +102,7 @@ channels:
 
     "#wikimedia-devtools":
         # teams
+        - phabricator-upstream
         - Phabricator
         - phab-.*
         # projects
@@ -219,6 +220,7 @@ channels:
     # are also reported elsewhere.
     "#wikimedia-dev":
         - MediaWiki(-.*)?
+        - phabricator-upstream
         - Phabricator
         - phab-.*
         - Design
