Add #wikimedia-lta channel
Change-Id: I03a68b680f2c5e71913665a3a6e63da2b876cbd0

--- a/channels.yaml
+++ b/channels.yaml
@@ -257,6 +257,8 @@ channels:
         - Wikisource
         - Wikisource-Community-User-Group
         - ProofreadPage
+    "#wikimedia-lta":
+        - Tool-Labs-tools-LTA-Knowledgebase
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
