Phab: Add Two-Column-Edit-Conflict-Merge to wmde tech chan
Change-Id: Ic28b00494ece621495b621b17b9b92ef1aedec15

--- a/channels.yaml
+++ b/channels.yaml
@@ -58,6 +58,7 @@ channels:
         - Attribution-Generator
         - CatWatch
         - Cognate
+        - Two-Column-Edit-Conflict-Merge
         - WMDE-(.*)-Team(-Board)?
 
     "#wikimedia-commtech":
