Phab: Add InterwikiSorting to wmde tech channel
Change-Id: I1600c932072cfd751cef51841de59fc205c15cf8

--- a/channels.yaml
+++ b/channels.yaml
@@ -58,6 +58,7 @@ channels:
         - Attribution-Generator
         - CatWatch
         - Cognate
+        - MediaWiki-extensions-InterwikiSorting
         - Two-Column-Edit-Conflict-Merge
         - WMDE-(.*)-Team(-Board)?
 
