Adding configuration for tool-quarrybot-enwiki
Bug: T158355
Change-Id: Iefaffd1b05a6b65568cb3cc002738cff3d00fcc4

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -213,3 +213,5 @@ channels:
         mediawiki/core:
     "##Zppix-Wikipedia":
          labs/tools/zppixbot:
+         labs/tools/quarrybot-enwiki:
+
