Add notifications for tools.zppixbot and quarrybot-enwiki
Change-Id: I086f9b5a27902426c97f066c5f00583701032454

--- a/channels.yaml
+++ b/channels.yaml
@@ -264,6 +264,9 @@ channels:
         - ProofreadPage
     "#wikimedia-lta":
         - Tool-Labs-tools-LTA-Knowledgebase
+    "##Zppix-Wikimedia":
+        -Tool-Labs-tools-Zppixbot
+        -QuarryBot-enwiki
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
