Add RecentChanges and Watchlist to #wikimedia-collaboration
Change-Id: I6093929d52db2c2b43db90f6c5e42d5c090167db

--- a/channels.yaml
+++ b/channels.yaml
@@ -44,6 +44,8 @@ channels:
         - Edit-Review-Improvements(-.*)?
         - Flow
         - MoodBar
+        - MediaWiki-Recent-changes
+        - MediaWiki-Watchlist
         - MediaWiki-extensions-PageCuration
         - Notifications
         - Thanks
