Fix typo preventing phab notifications to ##Zppix-Wikipedia
Bug: T159612
Change-Id: I52a511291e6cbd8708d496ec7a11ba4621d97d8d

--- a/channels.yaml
+++ b/channels.yaml
@@ -266,7 +266,7 @@ channels:
         - ProofreadPage
     "#wikimedia-lta":
         - Tool-Labs-tools-LTA-Knowledgebase
-    "##Zppix-Wikimedia":
+    "##Zppix-Wikipedia":
         -Tool-Labs-tools-Zppixbot
         -QuarryBot-enwiki
 
