Simplify #-releng projects
Ended up just simplifying the channel list: CI-(.*)

Bug: T165537
Change-Id: I9dddf833eee4a39276bcbb145d751c0e99013808

--- a/channels.yaml
+++ b/channels.yaml
@@ -116,9 +116,7 @@ channels:
         - releng-(.*)
         # projects
         - Releng-Admin
-        - Continuous-Integration-Infrastructure(.*)
-        - Continuous-Integration-Config(.*)
-        - Continuous-Integration-Scaling(.*)
+        - Continuous-Integration-(.*)
         - Beta-Cluster-Infrastructure(.*)
         - Staging
         - Deployment-Systems(.*)
