Add bot to #wikimedia-cloud
The #wikimedia-labs channel is being renamed to #wikimedia-cloud. This
first step duplicates the -labs config to -cloud. A follow up will
remove the -labs settings after the new channel is fully working.

Bug: T166420
Change-Id: I9fccae5b7600563a352cab691fbbea445d4d95d8

--- a/channels.yaml
+++ b/channels.yaml
@@ -77,7 +77,20 @@ channels:
     "#mediawiki-i18n":
         - translatewiki\.net
 
+    # wikimedia-labs is being renamed to wikimedia-cloud (T166420)
     "#wikimedia-labs":
+        - Tool-Labs(.*)?
+        - Labs(-.*)?
+        - Wikimedia-Labs(-.*)?
+        - MediaWiki-extensions-OpenStackManager
+        - Quarry
+        - Wikibugs
+        - Gerrit-Patch-Uploader
+        - LabsDB-Auditor
+        - PAWS
+        - Striker
+
+    "#wikimedia-cloud":
         - Tool-Labs(.*)?
         - Labs(-.*)?
         - Wikimedia-Labs(-.*)?
