Add bot to #wikimedia-ops
Change-Id: I3024e26fe84bc4a862c61724273b9cbbaf40f539

--- a/channels.yaml
+++ b/channels.yaml
@@ -280,6 +280,8 @@ channels:
     "##Zppix-Wikipedia":
         -Tool-Labs-tools-Zppixbot
         -QuarryBot-enwiki
+    "#wikimedia-ops":
+        - wikimedia-irc-freenode
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
