Fix the config to include updated phab tags for Wikimedia-AI
Change-Id: I82f2a65843135004cc557292bfc421c7d628b27f

--- a/channels.yaml
+++ b/channels.yaml
@@ -24,7 +24,8 @@ channels:
         - WM-Bot
 
     "#wikimedia-ai":
-        - Revision-Scoring-As-A-Service(-.*)?
+        - Scoring-platform-team
+        - Scoring-platform-team-Backlog
 
     "#wikidata-feed":
         - Wikidata
