--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -182,6 +182,7 @@ channels:
         mediawiki/extensions/RevisionSlider:
         mediawiki/extensions/FileImporter:
         mediawiki/extensions/FileExporter:
+        mediawiki/extensions/AdvancedSearch:
     "#wikimedia-multimedia":
         mediawiki/extensions/CommonsMetadata.*:
         mediawiki/extensions/UploadWizard.*:
