Add cloud-services-team to #wikimedia-cloud
Change-Id: I040399852ae488f26e14b328c089c2419a4f802f

--- a/channels.yaml
+++ b/channels.yaml
@@ -89,6 +89,7 @@ channels:
         - LabsDB-Auditor
         - PAWS
         - Striker
+        - cloud-services-team
 
     "#wikimedia-devtools":
         # teams
