Fix ##Zppix-Wikipedia configuration
Change-Id: I72610a6d780c5990c872bca51770565e10988a0b

--- a/channels.yaml
+++ b/channels.yaml
@@ -267,8 +267,8 @@ channels:
     "#wikimedia-lta":
         - Tool-Labs-tools-LTA-Knowledgebase
     "##Zppix-Wikipedia":
-        -Tool-Labs-tools-Zppixbot
-        -QuarryBot-enwiki
+        - Tool-Labs-tools-Zppixbot
+        - QuarryBot-enwiki
     "#wikimedia-ops":
         - wikimedia-irc-freenode
 
