change old project names  for projects maintained by Zppix and add an additional project
Change-Id: Iadf63c3e34af6377c8cab07857932f7e8255f725

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -215,4 +215,5 @@ channels:
     "##Zppix-Wikipedia":
          labs/tools/zppixbot:
          labs/tools/quarrybot-enwiki:
+         labs/icinga2:
 
