Move wikibugs performance updates to #wikimedia-perf-bots
This way we’ll consolidate all performance bots on the
same channel and have #wikimedia-perf focused
on human discussion.

Change-Id: Id2a4b37bb25bc72b2d28da85e80328cc8e87bb4d

--- a/channels.yaml
+++ b/channels.yaml
@@ -168,7 +168,7 @@ channels:
         - Interactive-Sprint(.*)?
         - Tabular-Data(.*)?
 
-    "#wikimedia-perf":
+    "#wikimedia-perf-bots":
         - Performance-Team
         - MediaWiki-ResourceLoader
 
