Move perf gerrit updates to #wikimedia-perf-bots
Change-Id: I08f0a3b855babfe3c90d15b69119ec63c07b2ad8

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -62,7 +62,7 @@ channels:
         mediawiki/extensions/ORES:
     "#wikimedia-analytics":
         analytics/.*:
-    "#wikimedia-perf":
+    "#wikimedia-perf-bots":
         performance.*:
     "#wikimedia-dev":
         # This is also sent to #mediawiki-i18n
