--- a/channels.yaml
+++ b/channels.yaml
@@ -57,16 +57,13 @@ channels:
         - TCB-Team
         - German-Community-Wishlist
         - Phragile
-        - WMDE-Analytics-Engineering
-        - WMDE-Fundraising-Software
-        - WMDE-Design
         - Revision-Slider
         - Attribution-Generator
         - CatWatch
         - Cognate
         - MediaWiki-extensions-InterwikiSorting
         - Two-Column-Edit-Conflict-Merge
-        - WMDE-(.*)-Team(-Board)?
+        - WMDE-(.*)
 
     "#wikimedia-commtech":
         - Community-Tech(-.*)?
