Add MediaWiki-extensions-Wikibase(.*) to #wikidata-feed
This now includes things such as:
 - MediaInfo
 - View
 - etc.

Change-Id: If072572cd814fa38e6367872b884197affe9063e

--- a/channels.yaml
+++ b/channels.yaml
@@ -30,8 +30,7 @@ channels:
     "#wikidata-feed":
         - Wikidata
         - Wikibase(-.*)?
-        - MediaWiki-extensions-WikibaseRepository
-        - MediaWiki-extensions-WikibaseClient
+        - MediaWiki-extensions-Wikibase(.*)?
         - Wikimedia-Wikidata
         - ArticlePlaceholder
         - Wikidata.org
