Wikimedia-cloud: Adjust for renamed tags
Update tasks sent to the #wikimedia-could channel to work with renamed
tags.

Bug: T167244
Change-Id: I70b8180dea8b63a4f6deb6f3e244492c72f8555f

--- a/channels.yaml
+++ b/channels.yaml
@@ -76,17 +76,25 @@ channels:
         - translatewiki\.net
 
     "#wikimedia-cloud":
-        - Tool-Labs(.*)?
-        - Labs(-.*)?
-        - Wikimedia-Labs(-.*)?
-        - MediaWiki-extensions-OpenStackManager
-        - Quarry
-        - Wikibugs
+        - Cloud-Services
+        - cloud-services-team(.*)?
+        - Cloud-VPS
+        - Data-Services
         - Gerrit-Patch-Uploader
+        - Horizon
         - LabsDB-Auditor
+        - MediaWiki-extensions-OpenStackManager
         - PAWS
+        - Quarry
         - Striker
-        - cloud-services-team
+        - Tool-(.*)
+        - Toolforge
+        - Tools
+        - Tools-Kubernetes
+        - VPS-Project-(.*)
+        - VPS-Projects
+        - Wikibugs
+        - wikitech.wikimedia.org
 
     "#wikimedia-devtools":
         # teams
