Cloud Services: Notify for Cloud-VPS milestones
Include the Cloud-VPS (Quota-requests) and Cloud-VPS (Project-requests)
milestone projects.

Change-Id: Ia6ff2b60355d9657fb15635a181905b0a96e1a1c

--- a/channels.yaml
+++ b/channels.yaml
@@ -78,7 +78,7 @@ channels:
     "#wikimedia-cloud":
         - Cloud-Services
         - cloud-services-team(.*)?
-        - Cloud-VPS
+        - Cloud-VPS(.*)?
         - Data-Services
         - Gerrit-Patch-Uploader
         - Horizon
