Update project name for XTools
Bug: T171265
Change-Id: I4a939a8c292368cb46676b183723b30fe8e00a3e

--- a/channels.yaml
+++ b/channels.yaml
@@ -256,7 +256,7 @@ channels:
         - mediawiki-skins-Blueprint
 
     "#wikimedia-xtools":
-        - Tool-Labs-tools-Xtools
+        - XTools
 
     "#wikimedia-ios":
         - Wikipedia-iOS-.*
