Add 3 more tags to design channel
Change-Id: Icad16afd48b937c7890a78be42efcfd07952a4d2

--- a/channels.yaml
+++ b/channels.yaml
@@ -222,6 +222,9 @@ channels:
         - WMF-Design
         - WMF-Design-Research
         - UI-Standardization
+        - OOjs-UI(-.*)?
+        - accessibility
+        - mediawiki-interface
 
     "#wikimedia-fundraising":
         - .*(?<!WMDE-)(?<!TCB-Team-)Fundraising.*
@@ -254,6 +257,9 @@ channels:
         - WMF-Design-Research
         - UI-Standardization
         - mediawiki-skins-Blueprint
+        - OOjs-UI(-.*)?
+        - accessibility
+        - mediawiki-interface
 
     "#wikimedia-xtools":
         - XTools
