Add IRC channel feed for Anti-Harassment board
Change-Id: Ib46631c92dd5a8866d52caa12b752a4a0764d21b

--- a/channels.yaml
+++ b/channels.yaml
@@ -69,6 +69,9 @@ channels:
         - Community-Tech(-.*)?
         - Community-Wishlist-Survey
 
+    "#wikimedia-anti-harassment-tools":
+        - Anti-Harassment
+
     "#wikimedia-ed":
         - Education-.*
 
