Due to rebranding of cloud i must again change my projects in this config.
Change-Id: I512f1ff80224741531cffca2201bf6a3bbce1f6c

--- a/channels.yaml
+++ b/channels.yaml
@@ -272,9 +272,9 @@ channels:
     "#wikimedia-lta":
         - Tool-Labs-tools-LTA-Knowledgebase
     "##Zppix-Wikipedia":
-        - Tool-project-tools-Zppixbot
+        - Tools-Zppixbot
         - QuarryBot-enwiki
-        - Labs-project-icinga2
+        - VPS-project-icinga2
     "#wikimedia-ops":
         - wikimedia-irc-freenode
 
