Also match anti-harassment sprints
Change-Id: I84cbbe112b27a4f53cb30b2e6ae538be825399ad

--- a/channels.yaml
+++ b/channels.yaml
@@ -71,6 +71,7 @@ channels:
 
     "#wikimedia-anti-harassment-tools":
         - Anti-Harassment
+        - Anti-Harassment .*
 
     "#wikimedia-ed":
         - Education-.*
