--- a/channels.yaml
+++ b/channels.yaml
@@ -287,6 +287,8 @@ channels:
         - VPS-project-icinga2
     "#wikimedia-ops":
         - wikimedia-irc-freenode
+    "##goat":
+        - Goatification
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
