Add #wiki-dev-africa to channel list
Integrating Africa Wikimedia Developers IRC channel
to the wikibugs so it tracks activities on the work
board and log to the IRC channel.

Bug: T173555
Change-Id: Ida7f3fec2f2cca4b89b380ea6c1aece956e3e9ba

--- a/channels.yaml
+++ b/channels.yaml
@@ -290,5 +290,8 @@ channels:
     "##goat":
         - Goatification
 
+    "#wiki-dev-africa":
+        - Africa-Wikimedia-Developers
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
