Add Mediawiki-extension-SendGrid work board to wikibugs
Adding the SendGrid mediawiki extension phabricator work board
to wikibugs so activities can be pushed to the #wiki-dev-africa
IRC channel on freenode.

Bug: T174260
Change-Id: I81353a5470371b598e99c63d98179a658a34b89a

--- a/channels.yaml
+++ b/channels.yaml
@@ -292,6 +292,7 @@ channels:
 
     "#wiki-dev-africa":
         - Africa-Wikimedia-Developers
+        - MediaWiki-extensions-SendGrid
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
