fix typo in ##Zppix-Wikipedia chan config for phab
Change-Id: I5f9c4cdc9fee441ec35562ecc1d0fda84fe0dbcf

--- a/channels.yaml
+++ b/channels.yaml
@@ -283,7 +283,7 @@ channels:
         - ProofreadPage
 
     "##Zppix-Wikipedia":
-        - Tools-Zppixbot
+        - Tool-Zppixbot
         - QuarryBot-enwiki
         - VPS-project-icinga2
     "#wikimedia-ops":
