wikimedia-editing: Update renamed Editing-Department tag
Tasks with #Editing-Department were no longer reported because
the Phabricator project was renamed to #Contributors-Team.

Change-Id: Ib13c32b606b2d920972d6d284befabf106426c1b

--- a/channels.yaml
+++ b/channels.yaml
@@ -153,7 +153,7 @@ channels:
         - MediaWiki-extensions-Graph-VE
 
     "#wikimedia-editing":
-        - Editing-Department
+        - Contributors-Team
         - Blocked-on-Editing
         - OOjs(-.*)?
         - OOjs-UI(-.*)?
