--- a/channels.yaml
+++ b/channels.yaml
@@ -151,6 +151,7 @@ channels:
         - WikiEditor
         - UnicodeJS
         - MediaWiki-extensions-Graph-VE
+        - Editing-team
 
     "#wikimedia-editing":
         - Contributors-Team
