Update Wikimedia-AI's irc config
Change-Id: I8a1ed479886501fba9371ad6ccec68b4db558f48

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -60,6 +60,10 @@ channels:
         mediawiki/extensions/SolrStore:
     "#wikimedia-ai":
         mediawiki/extensions/ORES:
+        mediawiki/services/ores/deploy:
+        mediawiki/services/ores:
+        mediawiki/services/ores/wikiclass:
+        mediawiki/services/ores/editquality:
     "#wikimedia-analytics":
         analytics/.*:
     "#wikimedia-perf-bots":
