--- a/channels.yaml
+++ b/channels.yaml
@@ -25,8 +25,7 @@ channels:
         - WM-Bot
 
     "#wikimedia-ai":
-        - Scoring-platform-team
-        - Scoring-platform-team-Backlog
+        - Scoring-platform-team(.*)?
 
     "#wikidata-feed":
         - Wikidata
