Move wmcs-related notices to #wikimedia-cloud-feed
Bug: T177427
Change-Id: I943735094ce9895f84cbd674b058cf1253ec5d54

--- a/channels.yaml
+++ b/channels.yaml
@@ -78,7 +78,7 @@ channels:
     "#mediawiki-i18n":
         - translatewiki\.net
 
-    "#wikimedia-cloud":
+    "#wikimedia-cloud-feed":
         - Cloud-Services
         - cloud-services-team(.*)?
         - Cloud-VPS(.*)?
