Add more ORES repos
Change-Id: I9275752b5b62d01e8119f1f6faf198d24c5eafdd

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -64,6 +64,9 @@ channels:
         mediawiki/services/ores:
         mediawiki/services/ores/wikiclass:
         mediawiki/services/ores/editquality:
+        research/ores:
+        research/ores/deploy:
+        research/ores/wheels:
     "#wikimedia-analytics":
         analytics/.*:
     "#wikimedia-perf-bots":
