All-Users and All-Projects to #wikimedia-releng reporting
Change-Id: I86d31e9e5cb9cc7aae8ac02327815105606d1a5b

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -160,6 +160,8 @@ channels:
         mediawiki/tools/release:
         mediawiki/tools/releng:
         mediawiki/tools/scap:
+        All-Projects:
+        All-Users:
         # All commits to a betacluster branch goes here
         .*:
             branch: "betacluster"
@@ -220,4 +222,3 @@ channels:
          labs/tools/zppixbot:
          labs/tools/quarrybot-enwiki:
          labs/icinga2:
-
