Add #ZppixBot and fix ##Zppix-Wikipedia configs
Change-Id: I2e6d970c238b7fefc19513d823caec7a6f44cbb2

--- a/channels.yaml
+++ b/channels.yaml
@@ -286,6 +286,8 @@ channels:
         - Tool-Zppixbot
         - QuarryBot-enwiki
         - VPS-project-icinga2
+    "#ZppixBot":
+         -Tool-ZppixBot
     "#wikimedia-ops":
         - wikimedia-irc-freenode
     "##goat":
