Cleanup, Merjin made me do this
Change-Id: Iedef819b6e6614987db5fcd5e286977dc916eeb3

--- a/channels.yaml
+++ b/channels.yaml
@@ -279,10 +279,12 @@ channels:
         - Tool-Zppixbot
         - QuarryBot-enwiki
         - VPS-project-icinga2
-    "#ZppixBot":
-         -Tool-ZppixBot
+    "ZppixBot":
+         - Tool-ZppixBot
+
     "#wikimedia-ops":
         - wikimedia-irc-freenode
+
     "##goat":
         - Goatification
 
