I promise I understand how to write code and change configs... it may take me 430 patchsets first.
Change-Id: I3df3ae93fa4b9b67793cdbf34755c4d39780d2e1

--- a/channels.yaml
+++ b/channels.yaml
@@ -279,7 +279,7 @@ channels:
         - Tool-Zppixbot
         - QuarryBot-enwiki
         - VPS-project-icinga2
-    "ZppixBot":
+    "#ZppixBot":
          - Tool-ZppixBot
 
     "#wikimedia-ops":
