If its not working break it more.
Change-Id: Ic260bb976fb3d8ba7390d972d3a2086c97b93778

--- a/channels.yaml
+++ b/channels.yaml
@@ -279,8 +279,9 @@ channels:
         - Tool-Zppixbot
         - QuarryBot-enwiki
         - VPS-project-icinga2
+
     "#ZppixBot":
-         - Tool-ZppixBot
+        - Tool-Zppixbot
 
     "#wikimedia-ops":
         - wikimedia-irc-freenode
