Gerrit: report wikibase/.* to #wikidata-feed
Change-Id: I8f9b59d7816e7f4b9dd13d68ca48037279f97652

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -178,6 +178,7 @@ channels:
         mediawiki/extensions/ArticlePlaceholder:
         mediawiki/extensions/WikimediaBadges:
         wikidata/.*:
+        wikibase/.*:
     "#wikimedia-de-tech":
         analytics/wmde/.*:
         mediawiki/extensions/Cognate:
