add #wikimedia-ve to wikibugs
Bug: T160973
Change-Id: I35941c6864de94379e61daab9b840cb290b5001c

--- a/channels.yaml
+++ b/channels.yaml
@@ -145,6 +145,9 @@ channels:
         - MediaWiki-extensions-Graph-VE
         - Editing-team
 
+    "#wikimedia-ve":
+        - Wikimedia-Venezuela
+
     "#wikimedia-editing":
         - Contributors-Team
         - Blocked-on-Editing
